--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,18 +7,20 @@ body {
 }
 
 .navbar {
-    display:flex;
-    justify-content:flex-start;
+    z-index: 9999;
+    /* pastikan lebih tinggi dari gambar */
+    display: flex;
+    justify-content: flex-start;
     padding: 20px 40px;
     position: sticky;
     top: 0;
     background: #f6f0f0cc;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(5px);
 }
 
 nav {
-    display:flex;
-    overflow:scroll;
+    display: flex;
+    overflow: scroll;
     scrollbar-width: none;
     -webkit-overflow-scrolling: touch;
 }
@@ -54,7 +56,7 @@ nav a {
 }
 
 .hero-content {
-    display:flex ;
+    display: flex;
     flex-direction: column;
     gap: 30px;
 }
@@ -103,4 +105,45 @@ nav a {
 .article-card img {
     width: 100%;
     border-radius: 8px;
+}
+
+section img {
+    float: left;
+    margin: 0 16px 12px 0;
+    margin-right: 30px;
+    max-width: 45%;
+    height: auto;
+    border-radius: 20px;
+}
+
+section ul,
+section ol {
+    list-style-position:outside;
+    padding-left: 28px;
+    
+}
+
+.portfolio-card {
+    position: relative;
+    overflow: hidden;
+}
+
+.portfolio-card div:hover {
+    width: fit-content;
+    box-shadow: 0 8px 30px rgba(0, 0, 0, 0.28);
+    transform: translateY(-4px);
+    border-radius: 0px;
+}
+
+.portfolio-card div {
+    overflow: hidden;
+    width: fit-content;
+    transition: box-shadow .3s ease, transform .3s ease;
+    border-radius: 20px;
+}
+
+.portfolio-card img {
+    width: 300px;
+    max-width: 100%;
+    transition: transform 0.3s ease, transform-origin 0.2s ease;
 }
